# ur_audio_sub

./: .gitignore  Demo_transcribe audio file & Youtube video with ur_audio_sub 2022-11-07.ipynb  Demo_transcribe_audio_file_&_Youtube_video_with_ur_audio_sub_2022_11_07.ipynb  LICENSE  README.md  pyproject.toml  setup.cfg
ur_audio_sub/: __init__.py  caption_generator.py  util.py
