[metadata]
name = ur_audio_sub
version = 0.0.1
author = Thinh Vu
author_email = mrthinh@live.com
description = Generate text captions for audio files & youtube video using OpenAI Whisper. Multiple languages support.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinh-vu/ur_audio_sub
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7
